--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">EnjoyLife</string>
-    <string name="load">加载</string>
+    <string name="load">加载ing....</string>
     <string name="pull_to_refresh"></string>
     <string name="release_to_refresh">释放立即刷新</string>
     <string name="refreshing">美女已打包发出</string>
